--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "jupyterlab>=4.2.0",
     "pandas>=2.2.2",
     "pyarrow>=16.1.0",
+    "tqdm>=4.66.4",
+    "sklearn>=0.0.post12",
+    "scikit-learn>=1.4.2",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
