--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,26 @@
 [project]
 name = "mlops-zoomcap"
 version = "0.1.0"
-description = "Free MLOps course from DataTalks.Club"
+description = "Default template for PDM package"
 authors = [
     {name = "Samir Hinojosa", email = "samirhinojosa@gmail.com"},
 ]
 dependencies = [
-    "jupyterlab>=4.2.0",
+    "jupyter>=1.0.0",
+    "lab>=8.2",
     "pandas>=2.2.2",
-    "pyarrow>=16.1.0",
     "tqdm>=4.66.4",
-    "sklearn>=0.0.post12",
-    "scikit-learn>=1.4.2",
+    "scikit-learn>=1.5.0",
+    "seaborn>=0.13.2",
+    "hyperopt>=0.2.7",
+    "xgboost>=2.0.3",
+    "mlflow==2.13.0",
+    "pyarrow>=15.0.2",
 ]
-requires-python = ">=3.12"
+requires-python = "==3.12.*"
 readme = "README.md"
 license = {text = "MIT"}
 
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
-
 
 [tool.pdm]
-distribution = true
+distribution = false
